--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "proyek_iot_final",
   "version": "1.0.0",
   "description": "Website panic button untuk mempermudah pencarian mahasiswa/mahasiswi yang dalam bahaya",
-  "main": "index.js",
+  "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
