--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,5 @@
 {
-  "builds": [
-    {
-      "src": "/scripts/index.mjs",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.mjs"
-    }
+  "rewrites": [
+    {"source": "/(.*)", "destination":"/"}
   ]
 }
